<resources>
    <string name="app_name">TutorFinder</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="textview">TextView</string>
    <string name="my_profile">My Profile</string>
    <string name="my_messages">My Messages</string>
    <string name="find_tutor">Find Tutor</string>
    <string name="my_tutors">My Tutors</string>
    <string name="my_lessons">My Lessons</string>
    <string name="Messages" />
    <string name="Contacts" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="type_your_message_here">Type your message here!</string>
    <string name="send">Send</string>
    <string name="contacts">Contacts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Signup">Signup</string>
    <string name="Login">Login</string>
    <string name="google_maps_key" />
    <string name="title_activity_maps">Map</string>
    <string name="connect_users">Connect</string>
    <string name="App_Name">Tutor Finder</string>
    <string name="decline_request">Decline Request</string>
</resources>
