<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <include layout="@layout/app_bar_layout" android:id="@+id/main_page_toolbar"/>

    <Button
        android:id="@+id/connectBtn"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="19dp"
        android:text="@string/connect_users"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FindTutorsBtn" />

    <Button
        android:id="@+id/MyLessonsBtn"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="19dp"
        android:text="@string/my_lessons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyMessagesBtn" />

    <Button
        android:id="@+id/MyTutorsBtn"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="19dp"
        android:text="@string/my_tutors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyLessonsBtn" />

    <Button
        android:id="@+id/FindTutorsBtn"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="19dp"
        android:text="@string/find_tutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyTutorsBtn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="348dp"
        android:layout_height="0dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="245dp"
        android:layout_marginBottom="450dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/MyProfileBtn"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="470dp"
        android:text="@string/my_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.632" />

    <Button
        android:id="@+id/MyMessagesBtn"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="19dp"
        android:text="@string/my_messages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyProfileBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>